--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -12,13 +12,12 @@
 }
 
 body {
-    /* more on this crazy alphanumerical value in a minute! */
+    
     color: var(--tertiary-color);
     font-family: Helvetica, Arial, sans-serif;
   }
 
-
-/* apply styles to <header> */
+/* apply styles to header*/
 header {
     z-index: 9999;
     padding: 20px 35px;
@@ -87,67 +86,58 @@ header nav ul li a:hover {
 }
 
 header h1 {
-    font-weight: bold;
-    font-size: 36px;
-    color: rgb(211, 211, 211);
-    margin: 0;
-  }
-
+  font-weight: bold;
+  font-size: 36px;
+  color: rgb(211, 211, 211);
+  margin: 0;
+}
 
 .avatar-img{
-    flex: 1 12%;
-    margin-right: 20px;
-
-    
-  }
+  flex: 1 12%;
+  margin-right: 20px;
+}
  
 .avatar{
-    border-radius: 50%;
+  border-radius: 50%;
+}
 
+footer {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  background: var(--primary-color);
+  width: 100%;
+  padding: 40px 35px;
+  background-image: url("../images/header1.gif");
 }
 
 
-  footer {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    background: var(--primary-color);
-    width: 100%;
-    padding: 40px 35px;
-    background-image: url("../images/header1.gif");
-    
+footer h2 {
+  color: var(--secondary-color);
+  font-size: 30px;
+  margin: 0;
+}
 
-  }
+footer div {
+  line-height: 1.5;
+  text-align: right;
+}
 
-
-
-
-  footer h2 {
-    color: var(--secondary-color);
-    font-size: 30px;
-    margin: 0;
-  }
-
-  footer div {
-    line-height: 1.5;
-    text-align: right;
-  }
-
-  footer a {
-    color: var(--secondary-color);
-  }
+footer a {
+  color: var(--secondary-color);
+}
 
 /* Hero Style Start */
-  .hero {
-    background-image: url("../images/header1.gif");
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
-    background-position: 80%;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    align-items: flex-start
+.hero {
+  background-image: url("../images/header1.gif");
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  background-position: 80%;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  align-items: flex-start
 }
 
 .intro h2 {
@@ -240,7 +230,6 @@ header h1 {
 
 .link:hover .webpage {
   display: none;
-
 }
 
 .link:hover .website {
@@ -286,8 +275,7 @@ transform: scale(1.5);
 .contact-info div {
   color: #646464;
   text-align: center;
-  font-weight: bold;
-  
+  font-weight: bold; 
 }
 
 .contact-info {
@@ -295,8 +283,6 @@ transform: scale(1.5);
   justify-content: space-between;
   flex-wrap: wrap;
 }
-
-
 
 .contact-info > * {
   flex: 1;
@@ -314,8 +300,6 @@ transform: scale(1.5);
   font-size: 16px;
   font-style: normal;
 }
-
-
 
 section {
   padding: 60px;
@@ -377,8 +361,6 @@ section {
 
 }
 
-
-
 /* - - - - - - - - - - - - - - - - - - */
 @media screen and (max-width: 768px) {
 
@@ -409,7 +391,6 @@ section {
   }
 
 }
-
 
 @media screen and (max-width: 575px) {
 
